comments hero files added

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,11 +1,13 @@
 <!-- HERO -->
 <section class="hero">
   <div class="container hero__container">
+    <!-- Wrap for left-side elements -->
     <div class="hero__wrap">
       <h1 class="hero__page-title">
         ice cream made with
         <span class="hero__page-title--accent">passion</span>
       </h1>
+      <!-- Buttons -->
       <ul class="list hero__button-list">
         <li class="hero__button-item">
           <button class="btn btn-products" type="button">Products</button>
@@ -16,6 +18,7 @@
           </button>
         </li>
       </ul>
+      <!-- Plate with ice-creams -->
       <div class="hero__plate-wrap">
         <picture class="hero__plate-picture">
           <source
@@ -69,16 +72,18 @@
         </div>
       </div>
     </div>
-    <ul class="list hero__place-list">
-      <li class="hero__place-item">
-        <p class="hero__place-number">16</p>
-        <p class="hero__place-name">cafes</p>
+    <!-- Outlets -->
+    <ul class="list hero__outlet-list">
+      <li class="hero__outlet-item">
+        <p class="hero__outlet-number">16</p>
+        <p class="hero__outlet-name">cafes</p>
       </li>
-      <li class="hero__place-item">
-        <p class="hero__place-number">23</p>
-        <p class="hero__place-name">food trucks</p>
+      <li class="hero__outlet-item">
+        <p class="hero__outlet-number">23</p>
+        <p class="hero__outlet-name">food trucks</p>
       </li>
     </ul>
+    <!-- Wrap for images (absolute position) -->
     <div class="hero__img-wrap">
       <!-- Ice-cream -->
       <picture class="hero__ice-cream-picture">
