--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -1,38 +1,47 @@
 <!-- PRODUCTS -->
 <section class="products" id="products">
-  <div class="container">
-    <p>100% natural</p>
-    <h2>products</h2>
-    <ul class="list">
-      <li>
-        <div>
-          <h3>ice cream</h3>
-          <p>
-            Soft ice cream with a delicate taste. Made with milk, cream, sugar
-            and natural stabilizer
-          </p>
-          <button class="btn">arrow</button>
-        </div>
+  <div class="container products__container">
+    <p class="products__subtitle">100% natural</p>
+    <h2 class="products__title">products</h2>
+    <ul class="list products__list">
+      <li class="products__item">
+        <div class="products__circle"></div>
+        <h3 class="products__name">ice cream</h3>
+        <p class="products__description">
+          Soft ice cream with a delicate taste. Made with milk, cream, sugar and
+          natural stabilizer
+        </p>
+        <button class="btn products__arrow">
+          <svg class="products__arrow-icon" width="40" height="16">
+            <use href="./images/icons/svg-icons.svg#icon-long-arrow"></use>
+          </svg>
+        </button>
       </li>
-      <li>
-        <div>
-          <h3>ice coffee</h3>
-          <p>
-            Fragrant invigorating drink created from 100% natural ingredients
-            without the use of preservatives and flavor enhancers
-          </p>
-          <button class="btn">arrow</button>
-        </div>
+      <li class="products__item">
+        <div class="products__circle"></div>
+        <h3 class="products__name">ice coffee</h3>
+        <p class="products__description">
+          Fragrant invigorating drink created from 100% natural ingredients
+          without the use of preservatives and flavor enhancers
+        </p>
+        <button class="btn products__arrow">
+          <svg class="products__arrow-icon" width="40" height="16">
+            <use href="./images/icons/svg-icons.svg#icon-long-arrow"></use>
+          </svg>
+        </button>
       </li>
-      <li>
-        <div>
-          <h3>milkshakes</h3>
-          <p>
-            Sweet drinks based on milk and ice cream, supplemented with syrups,
-            fruits, berries and other sweets of your choice
-          </p>
-          <button class="btn">arrow</button>
-        </div>
+      <li class="products__item">
+        <div class="products__circle"></div>
+        <h3 class="products__name">milkshakes</h3>
+        <p class="products__description">
+          Sweet drinks based on milk and ice cream, supplemented with syrups,
+          fruits, berries and other sweets of your choice
+        </p>
+        <button class="btn products__arrow">
+          <svg class="products__arrow-icon" width="40" height="16">
+            <use href="./images/icons/svg-icons.svg#icon-long-arrow"></use>
+          </svg>
+        </button>
       </li>
     </ul>
   </div>
