products mobile styles added

--- a/src/partials/products.html
+++ b/src/partials/products.html
@@ -4,8 +4,8 @@
     <p class="products__subtitle">100% natural</p>
     <h2 class="products__title">products</h2>
     <ul class="list products__list">
-      <li class="products__item">
-        <div class="products__circle"></div>
+      <li class="products__item products__item--green">
+        <div class="products__circle products__circle--green"></div>
         <h3 class="products__name">ice cream</h3>
         <p class="products__description">
           Soft ice cream with a delicate taste. Made with milk, cream, sugar and
@@ -17,8 +17,8 @@
           </svg>
         </button>
       </li>
-      <li class="products__item">
-        <div class="products__circle"></div>
+      <li class="products__item products__item--yellow">
+        <div class="products__circle products__circle--yellow"></div>
         <h3 class="products__name">ice coffee</h3>
         <p class="products__description">
           Fragrant invigorating drink created from 100% natural ingredients
@@ -30,8 +30,8 @@
           </svg>
         </button>
       </li>
-      <li class="products__item">
-        <div class="products__circle"></div>
+      <li class="products__item products__item--brown">
+        <div class="products__circle products__circle--brown"></div>
         <h3 class="products__name">milkshakes</h3>
         <p class="products__description">
           Sweet drinks based on milk and ice cream, supplemented with syrups,
