--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -1,24 +1,24 @@
 @import '~node_modules/modern-normalize/modern-normalize.css';
-.btn-read-more,
+.btn-how-its-made, .btn-read-more,
 .btn-locations,
-.btn-buy-now, .btn-how-its-made, .btn-franchise, .btn-products {
+.btn-buy-now, .btn-franchise, .btn-products {
   font-weight: 600;
   font-size: 14px;
   line-height: 1.2857142857;
   border-radius: 10px;
   color: #000000;
 }
-.btn-read-more:focus,
+.btn-how-its-made:focus, .btn-read-more:focus,
 .btn-locations:focus,
-.btn-buy-now:focus, .btn-how-its-made:focus, .btn-franchise:focus, .btn-products:focus {
+.btn-buy-now:focus, .btn-franchise:focus, .btn-products:focus {
   color: #fcfcfc;
 }
 
-.btn-how-its-made, .btn-franchise, .btn-products {
+.btn-franchise, .btn-products {
   background-color: transparent;
   border: 2px solid #f8d24e;
 }
-.btn-how-its-made:hover, .btn-franchise:hover, .btn-products:hover, .btn-how-its-made:focus, .btn-franchise:focus, .btn-products:focus {
+.btn-franchise:hover, .btn-products:hover, .btn-franchise:focus, .btn-products:focus {
   border: 2px solid #0a8817;
 }
 
@@ -35,6 +35,57 @@
 .btn-buy-now:focus {
   background-color: #0a8817;
   border: 2px solid #0a8817;
+}
+
+.btn-how-its-made {
+  background-color: transparent;
+  border: none;
+}
+
+.products__arrow, .mobile-menu-open {
+  display: inline-flex;
+  margin: 0;
+  padding: 0;
+  border: 0;
+  background-color: transparent;
+}
+
+.products__title {
+  font-family: "Seymour One", sans-serif;
+  font-weight: 400;
+  font-size: 30px;
+  line-height: 1.2666666667;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products__title {
+    font-size: 34px;
+    line-height: 1.2647058824;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products__title {
+    font-size: 36px;
+    line-height: 1.25;
+  }
+}
+@media screen and (min-width: 768px) {
+  .products__title {
+    letter-spacing: 0.06em;
+  }
+}
+
+.products__circle--brown::before, .products__circle--yellow::before, .products__circle--green::before {
+  content: "";
+  position: absolute;
+  top: -11px;
+  left: 0;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 /* == GLOBAL STYLES RESET == */
@@ -65,7 +116,7 @@ h6 {
 }
 
 /* img */
-.image {
+img {
   display: block;
   max-width: 100%;
   height: auto;
@@ -85,8 +136,7 @@ body {
   background-color: #84a178;
 }
 
-header,
-section,
+section:not(.hero),
 footer {
   outline: 1px solid tomato;
 }
@@ -119,7 +169,7 @@ footer {
   width: 134px;
   height: 42px;
 }
-@media screen and (min-width: 480px) and (max-width: 767px) {
+@media screen and (max-width: 1199px) {
   .btn-products {
     width: 108px;
     height: 38px;
@@ -181,20 +231,31 @@ footer {
   height: 40px;
   line-height: 1.2142857143;
   text-decoration: underline;
-  border: 2px solid transparent;
   color: #f8d24e;
 }
-@media screen and (min-width: 480px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
   .btn-how-its-made {
     font-size: 12px;
     line-height: 1.25;
   }
 }
-.btn-how-its-made:hover, .btn-how-its-made:focus {
-  border: 2px solid transparent;
+@media screen and (max-width: 767px) {
+  .btn-how-its-made {
+    width: 100px;
+    height: 24px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .btn-how-its-made {
+    width: 114px;
+    height: 24px;
+  }
 }
 .btn-how-its-made:hover {
   color: #0a8817;
+}
+.btn-how-its-made:focus {
+  color: #fcfcfc;
 }
 
 /* === HEADER === */
@@ -205,11 +266,43 @@ footer {
   justify-content: space-between;
   align-items: center;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header__container {
+    padding-top: 20px;
+    padding-bottom: 16px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__container {
+    padding-top: 8px;
+    padding-bottom: 31px;
+  }
+}
 .header__nav {
   flex-basis: 69.5%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+}
+.header__logo {
+  width: 40px;
+  height: 37px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .header__logo {
+    width: 48px;
+    height: 44px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .header__logo {
+    width: 60px;
+    height: 65px;
+  }
+}
+.header__logo-img {
+  width: 100%;
+  height: 100%;
 }
 .header__menu {
   display: flex;
@@ -232,6 +325,12 @@ footer {
 .header__menu-link:hover, .header__menu-link:focus {
   color: #f8d24e;
 }
+@media screen and (min-width: 1200px) {
+  .header__menu-link {
+    padding-top: 20px;
+    padding-bottom: 20px;
+  }
+}
 .header__button-wrap {
   display: flex;
   align-items: center;
@@ -242,13 +341,6 @@ footer {
   }
 }
 
-.mobile-menu-open {
-  display: inline-flex;
-  margin: 0;
-  padding: 0;
-  border: 0;
-  background-color: transparent;
-}
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .mobile-menu-open {
     margin-right: 32px;
@@ -267,7 +359,51 @@ footer {
 }
 
 /* === HERO === */
+.hero {
+  height: 441px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero {
+    height: 337px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero {
+    height: 560px;
+  }
+}
+.hero__container {
+  padding-top: 38px;
+  display: flex;
+  flex-direction: column;
+  height: 100%;
+}
+@media screen and (min-width: 768px) {
+  .hero__container {
+    position: relative;
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero__container {
+    padding-top: 0;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__container {
+    padding-top: 14px;
+  }
+}
+.hero__wrap {
+  max-height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-start;
+}
 .hero__page-title {
+  margin-bottom: 32px;
+  width: 247px;
   font-family: "Seymour One", sans-serif;
   font-weight: 400;
   font-size: 26px;
@@ -275,6 +411,324 @@ footer {
   letter-spacing: 0.04em;
   text-transform: uppercase;
   color: #fcfcfc;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero__page-title {
+    margin-bottom: 24px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__page-title {
+    margin-bottom: 28px;
+    width: 367px;
+    font-size: 38px;
+    line-height: 1.2631578947;
+  }
+}
+.hero__page-title--accent {
+  font-size: 34px;
+  line-height: 0.9705882353;
+}
+@media screen and (min-width: 1200px) {
+  .hero__page-title--accent {
+    font-size: 38px;
+    line-height: 1.2631578947;
+  }
+}
+.hero__button-list {
+  margin-bottom: 19px;
+  display: flex;
+  align-items: center;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero__button-list {
+    margin-bottom: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__button-list {
+    margin-bottom: 42px;
+  }
+}
+.hero__button-item:not(:last-child) {
+  margin-right: 12px;
+}
+.hero__plate-wrap {
+  display: flex;
+  align-items: center;
+}
+@media screen and (max-width: 767px) {
+  .hero__plate-picture, .hero__text-wrap, .hero__outlet-list {
+    display: none;
+  }
+}
+.hero__plate-picture {
+  margin-right: 32px;
+}
+@media screen and (min-width: 1200px) {
+  .hero__plate-picture {
+    margin-right: 16px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero__plate-img {
+    width: 152px;
+    height: 152px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__plate-img {
+    width: 225px;
+    height: 225px;
+  }
+}
+.hero__text {
+  margin-bottom: 12px;
+  width: 139px;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.4166666667;
+  color: #fcfcfc;
+}
+@media screen and (min-width: 1200px) {
+  .hero__text {
+    margin-top: 29px;
+    margin-bottom: 24px;
+    width: 200px;
+    font-size: 14px;
+    line-height: 1.4285714286;
+  }
+}
+.hero__text-icon {
+  fill: #fcfcfc;
+}
+.hero__outlet-list {
+  margin-top: 14px;
+}
+@media screen and (min-width: 1200px) {
+  .hero__outlet-list {
+    margin-top: 8px;
+  }
+}
+.hero__outlet-item {
+  text-align: right;
+}
+.hero__outlet-item:not(:last-child) {
+  margin-bottom: 20px;
+}
+@media screen and (min-width: 1200px) {
+  .hero__outlet-item:not(:last-child) {
+    margin-bottom: 16px;
+  }
+}
+.hero__outlet-number {
+  margin-bottom: 4px;
+  font-weight: 900;
+  font-size: 28px;
+  line-height: 1.2142857143;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #131313;
+}
+@media screen and (min-width: 1200px) {
+  .hero__outlet-number {
+    font-size: 46px;
+    line-height: 1.2173913043;
+  }
+}
+.hero__outlet-name {
+  font-weight: 400;
+  font-size: 8px;
+  line-height: 1.25;
+  color: #fcfcfc;
+}
+@media screen and (min-width: 1200px) {
+  .hero__outlet-name {
+    font-size: 14px;
+    line-height: 1.2142857143;
+  }
+}
+.hero__img-wrap {
+  margin: 0 auto;
+  position: relative;
+  width: 320px;
+  height: 217px;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero__img-wrap {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 768px;
+    height: 329px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__img-wrap {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 1200px;
+    height: 560px;
+  }
+}
+.hero__img-ice-cream {
+  position: absolute;
+  bottom: 0;
+  left: 26%;
+  width: 177px;
+  height: 100%;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .hero__img-ice-cream {
+    width: 268px;
+    left: 408px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .hero__img-ice-cream {
+    width: 456px;
+    left: 652px;
+  }
+}
+.hero__img-dots {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  z-index: -1;
+  width: 100%;
+}
+
+/* === PRODUCTS ===*/
+.products {
+  text-align: center;
+  background-image: url(../images/background/jpg/backgroud-mobile-885.jpg);
+  background-repeat: repeat;
+  background-size: cover;
+  background-position: center;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .products {
+    background-image: url(../images/background/jpg/backgroud-mobile-@2x-1770.jpg);
+  }
+}
+.products__container {
+  padding: 60px 0;
+}
+.products__title {
+  margin-bottom: 145px;
+  color: #131313;
+}
+.products__subtitle {
+  margin-bottom: 12px;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  text-transform: uppercase;
+  color: #131313;
+}
+.products__list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.products__item {
+  position: relative;
+  padding: 123px 40px 16px 40px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 280px;
+  height: 420px;
+  border-radius: 24px;
+  transition: box-shadow 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.products__item--green {
+  background-color: #aec6a5;
+}
+.products__item--yellow {
+  background-color: #efd478;
+}
+.products__item--brown {
+  background-color: #d6936d;
+}
+.products__item:hover {
+  box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.15);
+}
+.products__item:not(:last-child) {
+  margin-bottom: 168px;
+}
+.products__circle {
+  position: absolute;
+  top: -100px;
+  left: 40px;
+  z-index: 2;
+  width: 200px;
+  height: 200px;
+  border-radius: 50%;
+}
+.products__circle--green {
+  background-color: #aec6a5;
+  box-shadow: 0px 5.34219px 20.0332px rgba(10, 136, 23, 0.25);
+}
+.products__circle--green::before {
+  background-image: url(../images/products/png/product-tablet-mobile1-200.png);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .products__circle--green::before {
+    background-image: url(../images/products/png/product-tablet-mobile1-@2x-400.png);
+  }
+}
+.products__circle--yellow {
+  background-color: #efd478;
+  box-shadow: 0px 5.40397px 20.2649px rgba(153, 114, 23, 0.25);
+}
+.products__circle--yellow::before {
+  background-image: url(../images/products/png/product-tablet-mobile2-200.png);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .products__circle--yellow::before {
+    background-image: url(../images/products/png/product-tablet-mobile2-@2x-400.png);
+  }
+}
+.products__circle--brown {
+  background-color: #d6936d;
+  box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
+}
+.products__circle--brown::before {
+  background-image: url(../images/products/png/product-tablet-mobile3-200.png);
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  .products__circle--brown::before {
+    background-image: url(../images/products/png/product-tablet-mobile3-@2x-400.png);
+  }
+}
+.products__name {
+  margin-bottom: 40px;
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.2;
+  text-align: center;
+  letter-spacing: 0.04em;
+  text-transform: uppercase;
+  color: #131313;
+}
+.products__description {
+  margin-bottom: auto;
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.7857142857;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #131313;
+}
+.products__arrow-icon {
+  fill: #131313;
+  transition: fill 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.products__arrow:hover .products__arrow-icon {
+  fill: #fcfcfc;
 }
 
 /* === FOOTER ==== */
