--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -32,5 +32,6 @@ $myColorTransition: color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myBgColorTransition: background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myFillTransition: fill 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myTransformTransition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+$myBoxShadowTransition: box-shadow 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
 // Other variables
