--- a/src/sass/layout/_header.scss
+++ b/src/sass/layout/_header.scss
@@ -1,6 +1,8 @@
 /* === HEADER === */
 
 .header {
+  background-color: $mainBgColor;
+
   &__container {
     padding-top: 12px;
     padding-bottom: 12px;
