--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -87,6 +87,18 @@
   background-repeat: no-repeat;
   background-size: cover;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products__circle--brown::before, .products__circle--yellow::before, .products__circle--green::before {
+    top: -12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__circle--brown::before, .products__circle--yellow::before, .products__circle--green::before {
+    top: -16px;
+    width: 302px;
+    height: 302px;
+  }
+}
 
 /* == GLOBAL STYLES RESET == */
 /* headings and paragraphs */
@@ -134,6 +146,37 @@ body {
   font-family: "Montserrat", sans-serif;
   color: #fcfcfc;
   background-color: #84a178;
+  background-image: url(../images/background/jpg/background-mobile-885.jpg);
+  background-repeat: repeat;
+  -o-object-fit: cover;
+     object-fit: cover;
+  -o-object-position: center;
+     object-position: center;
+}
+@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+  body {
+    background-image: url(../images/background/jpg/background-mobile-@2x-1770.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  body {
+    background-image: url(../images/background/jpg/background-tablet-963.jpg);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) and (min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 192dpi), screen and (min-width: 768px) and (max-width: 1199px) and (min-resolution: 2dppx) {
+  body {
+    background-image: url(../images/background/jpg/background-tablet-@2x-1926.jpg);
+  }
+}
+@media screen and (min-width: 1200px) {
+  body {
+    background-image: url(../images/background/jpg/background-desktop-1300.jpg);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  body {
+    background-image: url(../images/background/jpg/background-desktop-@2x-2600.jpg);
+  }
 }
 
 section:not(.hero),
@@ -259,6 +302,9 @@ footer {
 }
 
 /* === HEADER === */
+.header {
+  background-color: #84a178;
+}
 .header__container {
   padding-top: 12px;
   padding-bottom: 12px;
@@ -361,6 +407,7 @@ footer {
 /* === HERO === */
 .hero {
   height: 441px;
+  background-color: #84a178;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
   .hero {
@@ -463,6 +510,7 @@ footer {
   }
 }
 .hero__plate-picture {
+  z-index: 3;
   margin-right: 32px;
 }
 @media screen and (min-width: 1200px) {
@@ -576,6 +624,7 @@ footer {
   position: absolute;
   bottom: 0;
   left: 26%;
+  z-index: 3;
   width: 177px;
   height: 100%;
 }
@@ -595,29 +644,36 @@ footer {
   position: absolute;
   bottom: 0;
   left: 0;
-  z-index: -1;
+  z-index: 2;
   width: 100%;
 }
 
 /* === PRODUCTS ===*/
 .products {
   text-align: center;
-  background-image: url(../images/background/jpg/backgroud-mobile-885.jpg);
-  background-repeat: repeat;
-  background-size: cover;
-  background-position: center;
-}
-@media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
-  .products {
-    background-image: url(../images/background/jpg/backgroud-mobile-@2x-1770.jpg);
-  }
 }
 .products__container {
   padding: 60px 0;
 }
+@media screen and (min-width: 1200px) {
+  .products__container {
+    padding: 86px 0 34px;
+  }
+}
 .products__title {
   margin-bottom: 145px;
   color: #131313;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products__title {
+    margin-bottom: 200px;
+    letter-spacing: 0.04em;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__title {
+    margin-bottom: 303px;
+  }
 }
 .products__subtitle {
   margin-bottom: 12px;
@@ -627,14 +683,32 @@ footer {
   text-transform: uppercase;
   color: #131313;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products__subtitle {
+    font-size: 22px;
+    line-height: 1.2272727273;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__subtitle {
+    font-size: 30px;
+    line-height: 1.2333333333;
+  }
+}
 .products__list {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+@media screen and (min-width: 768px) {
+  .products__list {
+    flex-direction: row;
+    justify-content: center;
+  }
+}
 .products__item {
   position: relative;
-  padding: 123px 40px 16px 40px;
+  padding: 123px 40px 16px;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -643,6 +717,20 @@ footer {
   height: 420px;
   border-radius: 24px;
   transition: box-shadow 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products__item {
+    padding: 108px 26px 12px;
+    width: 224px;
+    height: 428px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__item {
+    padding: 165px 64px 60px;
+    width: 370px;
+    height: 536px;
+  }
 }
 .products__item--green {
   background-color: #aec6a5;
@@ -656,8 +744,20 @@ footer {
 .products__item:hover {
   box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.15);
 }
-.products__item:not(:last-child) {
-  margin-bottom: 168px;
+@media screen and (max-width: 767px) {
+  .products__item:not(:last-child) {
+    margin-bottom: 168px;
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products__item:not(:last-child) {
+    margin-right: 16px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__item:not(:last-child) {
+    margin-right: 29px;
+  }
 }
 .products__circle {
   position: absolute;
@@ -667,6 +767,20 @@ footer {
   width: 200px;
   height: 200px;
   border-radius: 50%;
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products__circle {
+    top: -108px;
+    left: 12px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__circle {
+    top: -167px;
+    left: 34px;
+    width: 302px;
+    height: 302px;
+  }
 }
 .products__circle--green {
   background-color: #aec6a5;
@@ -678,6 +792,16 @@ footer {
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
   .products__circle--green::before {
     background-image: url(../images/products/png/product-tablet-mobile1-@2x-400.png);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__circle--green::before {
+    background-image: url(../images/products/png/product-desktop1-302.png);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .products__circle--green::before {
+    background-image: url(../images/products/png/product-desktop1-@2x-604.png);
   }
 }
 .products__circle--yellow {
@@ -692,6 +816,16 @@ footer {
     background-image: url(../images/products/png/product-tablet-mobile2-@2x-400.png);
   }
 }
+@media screen and (min-width: 1200px) {
+  .products__circle--yellow::before {
+    background-image: url(../images/products/png/product-desktop2-302.png);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .products__circle--yellow::before {
+    background-image: url(../images/products/png/product-desktop2-@2x-604.png);
+  }
+}
 .products__circle--brown {
   background-color: #d6936d;
   box-shadow: 0px 5.41333px 20.3px rgba(0, 0, 0, 0.25);
@@ -704,6 +838,16 @@ footer {
     background-image: url(../images/products/png/product-tablet-mobile3-@2x-400.png);
   }
 }
+@media screen and (min-width: 1200px) {
+  .products__circle--brown::before {
+    background-image: url(../images/products/png/product-desktop3-302.png);
+  }
+}
+@media screen and (min-width: 1200px) and (min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (-webkit-min-device-pixel-ratio: 2), screen and (min-width: 1200px) and (min-resolution: 192dpi), screen and (min-width: 1200px) and (min-resolution: 2dppx) {
+  .products__circle--brown::before {
+    background-image: url(../images/products/png/product-desktop3-@2x-604.png);
+  }
+}
 .products__name {
   margin-bottom: 40px;
   font-weight: 700;
@@ -714,6 +858,19 @@ footer {
   text-transform: uppercase;
   color: #131313;
 }
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products__name {
+    font-size: 22px;
+    line-height: 1.2272727273;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__name {
+    margin-bottom: 66px;
+    font-size: 30px;
+    line-height: 1.2333333333;
+  }
+}
 .products__description {
   margin-bottom: auto;
   font-weight: 400;
@@ -723,12 +880,23 @@ footer {
   letter-spacing: 0.04em;
   color: #131313;
 }
+@media screen and (min-width: 1200px) {
+  .products__description {
+    font-size: 16px;
+    line-height: 1.75;
+  }
+}
 .products__arrow-icon {
   fill: #131313;
   transition: fill 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .products__arrow:hover .products__arrow-icon {
   fill: #fcfcfc;
+}
+
+/* === ABOUT === */
+.about {
+  background: #84a178;
 }
 
 /* === FOOTER ==== */
