--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -34,4 +34,11 @@ $myFillTransition: fill 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myTransformTransition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myBoxShadowTransition: box-shadow 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 
-// Other variables
+// Product cards
+
+$cardWidthMobile: 280px;
+$cardWidthTablet: 224px;
+$cardWidthDesktop: 370px;
+
+$thumbDiameterMobileTablet: 200px;
+$thumbDiameterDesktop: 302px;
