hero buttons replaced by links styled as buttons

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -7,15 +7,15 @@
         ice cream made with
         <span class="hero__page-title--accent">passion</span>
       </h1>
-      <!-- Buttons -->
+      <!-- Links styled as buttons -->
       <ul class="list hero__button-list">
         <li class="hero__button-item">
-          <button class="btn btn-products" type="button">Products</button>
+          <a class="btn btn-products btn-products--hero" href="#products"
+            >Products</a
+          >
         </li>
         <li class="hero__button-item">
-          <button class="btn btn-how-its-made" type="button">
-            How it’s made?
-          </button>
+          <a class="btn btn-how-its-made" href="#about">How it’s made?</a>
         </li>
       </ul>
       <!-- Plate with ice-creams -->
