--- a/src/sass/utils/_placeholders.scss
+++ b/src/sass/utils/_placeholders.scss
@@ -20,6 +20,7 @@
   @extend %btn-text;
 
   background-color: transparent;
+  color: $secondaryColor;
 
   @include button-border($mainAccentColor);
 
