--- a/src/partials/about.html
+++ b/src/partials/about.html
@@ -1,30 +1,38 @@
 <!-- ABOUT -->
 <section class="about" id="about">
-  <div class="container">
-    <p>tradition and love</p>
-    <h2>how it’s made?</h2>
-    <div class="thumb">
-      <img src="./images/cow/png/cow-mobile-279.png" alt="cow" />
+  <div class="container about__container">
+    <p class="about__subtitle">tradition and love</p>
+    <h2 class="about__title">how it’s made?</h2>
+    <div class="about__circle">
+      <div class="about__thumb">
+        <img
+          class="about_cow"
+          src="./images/cow/png/cow-mobile-279.png"
+          alt="cow"
+        />
+      </div>
     </div>
-    <div>
-      <p>
+    <div class="about__text-wrap">
+      <p class="about__text">
         Ice is a place where you will become not only a little happier, but also
         healthier. Health is the main value for us, and we follow it when
         creating our handmade desserts.
       </p>
-      <p>
+      <p class="about__text">
         We use traditional recipes and 100% natural ingredients. Our products
         are so natural that they can be given to children from the age of three
         years. Sweets lovers can expect 55 types of ice cream, 15 types of
         coffee and 23 milkshakes.
       </p>
-      <p>This is enough to choose ice cream and coffee for any mood!</p>
-      <button class="btn btn-read-more" type="button">
-        Read more
-        <svg class="btn-read-more__icon" width="12" height="12">
-          <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
-        </svg>
-      </button>
+      <p class="about__text">
+        This is enough to choose ice cream and coffee for any mood!
+      </p>
     </div>
+    <button class="btn btn-read-more" type="button">
+      Read more
+      <svg class="btn-read-more__icon" width="12" height="12">
+        <use href="./images/icons/svg-icons.svg#icon-right-arrow"></use>
+      </svg>
+    </button>
   </div>
 </section>
