about mobile styles added #2

--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -51,7 +51,7 @@
   background-color: transparent;
 }
 
-.products__title {
+.about__title, .products__title {
   font-family: "Seymour One", sans-serif;
   font-weight: 400;
   font-size: 30px;
@@ -60,19 +60,19 @@
   text-transform: uppercase;
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .products__title {
+  .about__title, .products__title {
     font-size: 34px;
     line-height: 1.2647058824;
   }
 }
 @media screen and (min-width: 768px) and (max-width: 1199px) {
-  .products__title {
+  .about__title, .products__title {
     font-size: 36px;
     line-height: 1.25;
   }
 }
 @media screen and (min-width: 768px) {
-  .products__title {
+  .about__title, .products__title {
     letter-spacing: 0.06em;
   }
 }
@@ -910,6 +910,62 @@ footer {
 /* === ABOUT === */
 .about {
   background: #84a178;
+}
+.about__container {
+  padding: 61px 0 50px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+.about__title {
+  margin-bottom: 32px;
+  width: 200px;
+  color: #fcfcfc;
+}
+.about__subtitle {
+  margin-bottom: 12px;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 1.2222222222;
+  text-transform: uppercase;
+  color: #fcfcfc;
+}
+.about__circle {
+  margin-bottom: 62px;
+  position: relative;
+  width: 280px;
+  height: 280px;
+  border-radius: 50%;
+  background-color: #f8d24e;
+}
+.about__thumb {
+  position: absolute;
+  top: 20px;
+  left: 0;
+  width: 280px;
+  height: 280px;
+  border-radius: 50%;
+}
+.about__text-wrap {
+  margin-bottom: 10px;
+}
+.about__text {
+  width: 220px;
+  font-weight: 400;
+  font-size: 12px;
+  letter-spacing: 0.04em;
+  color: #fcfcfc;
+}
+.about__text:nth-child(1) {
+  margin-bottom: 4px;
+  line-height: 1.75;
+}
+.about__text:nth-child(2) {
+  line-height: 1.5833333333;
+}
+.about__text:nth-child(3) {
+  display: none;
 }
 
 /* === FOOTER ==== */
