--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -10,12 +10,10 @@
       <!-- Links styled as buttons -->
       <ul class="list hero__button-list">
         <li class="hero__button-item">
-          <a class="btn btn-products btn-products--hero" href="#products"
-            >Products</a
-          >
+          <a class="btn-products" href="#products">Products</a>
         </li>
         <li class="hero__button-item">
-          <a class="btn btn-how-its-made" href="#about">How it’s made?</a>
+          <a class="btn-how-its-made" href="#about">How it’s made?</a>
         </li>
       </ul>
       <!-- Plate with ice-creams -->
