--- a/src/sass/index.css
+++ b/src/sass/index.css
@@ -656,7 +656,15 @@ footer {
   text-align: center;
 }
 .products__container {
-  padding: 60px 0;
+  padding-top: 60px;
+  padding-bottom: 60px;
+  display: flex;
+  flex-direction: column;
+}
+@media screen and (max-width: 767px) {
+  .products__container {
+    align-items: center;
+  }
 }
 @media screen and (min-width: 1200px) {
   .products__container {
@@ -699,14 +707,37 @@ footer {
   }
 }
 .products__list {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  align-self: center;
+  display: grid;
+  grid-template-columns: 1fr;
+  justify-items: center;
+  grid-auto-rows: minmax(420px, auto);
+  width: 280px;
+}
+@media screen and (max-width: 767px) {
+  .products__list {
+    row-gap: 168px;
+  }
 }
 @media screen and (min-width: 768px) {
   .products__list {
-    flex-direction: row;
-    justify-content: center;
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+@media screen and (min-width: 768px) and (max-width: 1199px) {
+  .products__list {
+    width: 704px;
+    -moz-column-gap: 16px;
+         column-gap: 16px;
+    grid-auto-rows: minmax(428px, auto);
+  }
+}
+@media screen and (min-width: 1200px) {
+  .products__list {
+    width: 1168px;
+    -moz-column-gap: 29px;
+         column-gap: 29px;
+    grid-auto-rows: minmax(536px, auto);
   }
 }
 .products__item {
@@ -717,7 +748,6 @@ footer {
   justify-content: space-between;
   align-items: center;
   width: 280px;
-  height: 420px;
   border-radius: 24px;
   transition: box-shadow 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -725,14 +755,12 @@ footer {
   .products__item {
     padding: 108px 26px 12px;
     width: 224px;
-    height: 428px;
   }
 }
 @media screen and (min-width: 1200px) {
   .products__item {
     padding: 165px 64px 60px;
     width: 370px;
-    height: 536px;
   }
 }
 .products__item--green {
@@ -746,21 +774,6 @@ footer {
 }
 .products__item:hover {
   box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.15);
-}
-@media screen and (max-width: 767px) {
-  .products__item:not(:last-child) {
-    margin-bottom: 168px;
-  }
-}
-@media screen and (min-width: 768px) and (max-width: 1199px) {
-  .products__item:not(:last-child) {
-    margin-right: 16px;
-  }
-}
-@media screen and (min-width: 1200px) {
-  .products__item:not(:last-child) {
-    margin-right: 29px;
-  }
 }
 .products__circle {
   position: absolute;
