--- a/src/sass/layout/_products.scss
+++ b/src/sass/layout/_products.scss
@@ -6,7 +6,15 @@
   // Products container
 
   &__container {
-    padding: 60px 0;
+    padding-top: 60px;
+    padding-bottom: 60px;
+
+    display: flex;
+    flex-direction: column;
+
+    @include less-then-tablet {
+      align-items: center;
+    }
 
     @include only-desktop {
       padding: 86px 0 34px;
@@ -59,13 +67,35 @@
   // Product cards
 
   &__list {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
+    align-self: center;
+
+    display: grid;
+    grid-template-columns: 1fr;
+    justify-items: center;
+    grid-auto-rows: minmax(420px, auto);
+
+    width: calc($minScreen - 2 * $containerPadMobile);
+
+    @include less-then-tablet {
+      row-gap: 168px;
+    }
 
     @include tablet-and-desktop {
-      flex-direction: row;
-      justify-content: center;
+      grid-template-columns: repeat(3, 1fr);
+    }
+
+    @include only-tablet {
+      width: calc($minTablet - 2 * $containerPadTablet);
+
+      column-gap: 16px;
+      grid-auto-rows: minmax(428px, auto);
+    }
+
+    @include only-desktop {
+      width: calc($minDesktop - 2 * $containerPadDesktop);
+
+      column-gap: 29px;
+      grid-auto-rows: minmax(536px, auto);
     }
   }
 
@@ -80,7 +110,6 @@
     align-items: center;
 
     width: $cardWidthMobile;
-    height: 420px;
 
     border-radius: 24px;
     transition: $myBoxShadowTransition;
@@ -89,14 +118,12 @@
       padding: 108px 26px 12px;
 
       width: $cardWidthTablet;
-      height: 428px;
     }
 
     @include only-desktop {
       padding: 165px 64px 60px;
 
       width: $cardWidthDesktop;
-      height: 536px;
     }
 
     &--green {
@@ -113,20 +140,6 @@
 
     &:hover {
       box-shadow: 15px 15px 20px rgba(0, 0, 0, 0.15);
-    }
-  }
-
-  &__item:not(:last-child) {
-    @include less-then-tablet {
-      margin-bottom: 168px;
-    }
-
-    @include only-tablet {
-      margin-right: 16px;
-    }
-
-    @include only-desktop {
-      margin-right: 29px;
     }
   }
 
