--- a/src/sass/utils/_variables.scss
+++ b/src/sass/utils/_variables.scss
@@ -27,12 +27,21 @@ $minMobile: 480px;
 $minTablet: 768px;
 $minDesktop: 1200px;
 
+// Min screen
+$minScreen: 320px;
+
 // Transitions
 $myColorTransition: color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myBgColorTransition: background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myFillTransition: fill 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myTransformTransition: transform 1000ms cubic-bezier(0.4, 0, 0.2, 1);
 $myBoxShadowTransition: box-shadow 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+
+// Container paddings
+
+$containerPadMobile: 20px;
+$containerPadTablet: 32px;
+$containerPadDesktop: 16px;
 
 // Product cards
 
